调整文件上传

--- a/client/.roadhogrc
+++ b/client/.roadhogrc
@@ -41,7 +41,7 @@
   },
   "proxy": {
     "/api": {
-      "target": "http://www.yurencloud.com:8080/",
+      "target": "http://localhost:8080/",
       "changeOrigin": true,
       "pathRewrite": { "^/api" : "" }
      }
