--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ server.port=8080
 mybatis.type-aliases-package=com.yurencloud.model
 #\u8FDE\u63A5\u6570\u636E\u5E93
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/yurencloud?autoReconnect=true&amp;autoReconnectForPools=true&amp;useSSL=false
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://39.107.138.16:3306/wanhuicloud?autoReconnect=true&amp;autoReconnectForPools=true&amp;useSSL=false
+spring.datasource.username=root111
+spring.datasource.password=Wang12345
 #JWT\u8BBE\u7F6E
 #\u5B58\u653EToken\u7684Header Key
 jwt.header=Authorization
@@ -14,5 +14,5 @@ jwt.secret=
 jwt.expiration=604800
 #Token\u524D\u7F00
 jwt.tokenHead=Bearer
-upload.path=
+upload.path=/root/file
 domain.url=http://localhost:8080
