--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -3,9 +3,10 @@ server.port=8080
 mybatis.type-aliases-package=com.yurencloud.model
 #\u8FDE\u63A5\u6570\u636E\u5E93
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/yurencloud?autoReconnect=true&amp;autoReconnectForPools=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://39.107.138.16:3306/wanhuicloud?autoReconnect=true&amp;autoReconnectForPools=true&amp;useSSL=false&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=Wang12345
+characterEncoding=utf-8
 #\u89E3\u51B3mysql\u65AD\u8FDE\u63A5\u95EE\u9898
 spring.datasource.test-on-borrow=false
 spring.datasource.test-while-idle=true
@@ -14,10 +15,10 @@ spring.datasource.time-between-eviction-runs-millis=3600000
 #\u5B58\u653EToken\u7684Header Key
 jwt.header=Authorization
 #JWT\u5BC6\u7801
-jwt.secret=
+jwt.secret=wangh
 jwt.expiration=604800
 #Token\u524D\u7F00
 jwt.tokenHead=Bearer
 
-upload.path=
-domain.url=http://www.yurencloud.com:8080
+upload.path=E:/
+domain.url= http://localhost:8080
