--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -20,5 +20,7 @@ jwt.expiration=604800
 #Token\u524D\u7F00
 jwt.tokenHead=Bearer
 
-upload.path=E:/
-domain.url= http://localhost:8080
+upload.path=/file/
+#upload.path=E:/
+domain.url= http://39.107.138.16:8080
+#domain.url= http://127.0.0.1:8080
