--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ mybatis.type-aliases-package=com.yurencloud.model
 #\u8FDE\u63A5\u6570\u636E\u5E93
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://39.107.138.16:3306/wanhuicloud?autoReconnect=true&amp;autoReconnectForPools=true&amp;useSSL=false
-spring.datasource.username=root111
+spring.datasource.username=root111article
 spring.datasource.password=Wang12345
 #JWT\u8BBE\u7F6E
 #\u5B58\u653EToken\u7684Header Key
